--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "framer-motion": "^11.0.3",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
