--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "sonner": "^1.4.0"
   },
   "devDependencies": {
