--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "resend": "^3.1.0",
     "sonner": "^1.4.0"
   },
   "devDependencies": {
