--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "canvas-confetti": "^1.9.2",
+    "cloudinary": "^2.0.0",
     "framer-motion": "^11.0.3",
     "mongoose": "^8.1.1",
+    "nanoid": "^5.0.5",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-image-file-resizer": "^0.4.8",
     "resend": "^3.1.0",
     "sonner": "^1.4.0"
   },
