--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "react-image-file-resizer": "^0.4.8",
     "react-loading-skeleton": "^3.4.0",
     "resend": "^3.1.0",
